# Nezia

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/docs/design/: source.md
crates/core/examples/: bench_commands.rs  demo_bus.rs  demo_dsp.rs  demo_loop_mp3.rs  demo_loop_perfect.rs  demo_play.rs  demo_spatial.rs  demo_streaming.rs
crates/core/src/: audio.rs  buffer_pool.rs  capture.rs  command.rs  config.rs  entity.rs  event.rs  lib.rs  limiter.rs  memory.rs  metrics.rs
crates/core/src/bus/: mod.rs  send.rs  send_table.rs  system.rs  world.rs
crates/core/src/container/: mod.rs  world.rs
crates/core/src/core/: bus_routing.rs  engine.rs  sparse_set.rs
crates/core/src/core/engine/: audio_thread.rs  buffer_api.rs  buffer_reader.rs  bus_api.rs  callback_registry.rs  capture_api.rs  container_api.rs  effect_alloc.rs  effect_api.rs  event_dispatch.rs  live_params.rs  metrics_api.rs  mod.rs  query_api.rs  send_alloc.rs  send_api.rs  slot_allocator.rs  (+4 more)
crates/core/src/effect/: biquad.rs  compressor.rs  hpf.rs  limiter.rs  lpf.rs  mod.rs  peq.rs  reverb.rs  system.rs  world.rs  worlds.rs
crates/core/src/snapshot/: mod.rs  registry.rs  world.rs
crates/core/src/source/: lifecycle.rs  mod.rs  system.rs  virtualizer.rs  world.rs
crates/core/src/spatial/: curve.rs  mod.rs  system.rs  world.rs
crates/core/src/streaming/: mirror_ring.rs  mod.rs  worker.rs
crates/core/tests/: capture.rs  custom_attenuation_curve.rs  limiter.rs  peaking_eq.rs  random_container.rs  scheduled_play.rs  send.rs  sidechain_ducking.rs  snapshot.rs  spawn_init.rs  stop_source_many.rs  streaming.rs
crates/ffi/: Cargo.toml  build.rs
crates/ffi/src/: attenuation_curve.rs  audio_meta.rs  buffer.rs  buffer_reader.rs  bus.rs  capture.rs  container.rs  effect.rs  engine.rs  lib.rs  memory.rs  panic.rs  send.rs  snapshot.rs  source.rs  spatial.rs  streaming.rs  types.rs
crates/ffi/tests/: smoke.rs
(+75 files in other folders)
