[package]
name = "nezia"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
arc-swap = "1.9.1"
cpal = "0.17.3"
ringbuf = "0.4.8"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg", "vorbis"] }
triple_buffer = "8"
wide = "0.7"
